--- a/Fysio WebApplication/Views/Patient/Create.cshtml
+++ b/Fysio WebApplication/Views/Patient/Create.cshtml
@@ -4,11 +4,10 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
 
-<h4>Patient</h4>
-<hr />
-<div class="row">
+<h1 class="text-center">Create patient</h1>
+<hr/>
+<div class="row card">
     <form asp-action="Create" enctype="multipart/form-data">
         <div class="row">
             <div class="col-md-6">
