--- a/Fysio WebApplication/Views/Home/Index.cshtml
+++ b/Fysio WebApplication/Views/Home/Index.cshtml
@@ -3,66 +3,74 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome!</h1>
-
+<div class="text-center row">
     @if (User.Identity.IsAuthenticated)
     {
-        @if (ViewBag.AppointmentsNextCount == 0 && ViewBag.AppointmentsNowCount == 0)
+        @if (User.Identity.IsAuthenticated)
         {
-            <p>You don't have any appointments.'.</p>
-        }
-        @if (ViewBag.AppointmentsNow.Count > 0)
-        {
-            <h5> Amount of appointments today : @ViewBag.AppointmentsNowCount</h5>
-            <hr/>
-            <div class="row">
-                @foreach (var stud in ViewBag.AppointmentsNow)
-                {
-                    <div class="col-md-4">
-                        <div class="card">
-                            @if (User.HasClaim("UserType", "Patient")){
-                                <h5>You have a appointment with: @stud.Employee.ApplicationUser.FirstName @stud.Employee.ApplicationUser.SurName</h5>
-                            }else{
-                                <h5>You have a appointment with: @stud.Patient.ApplicationUser.FirstName @stud.Patient.ApplicationUser.SurName</h5>
-                            }
-                            @Html.ActionLink("MedicalFile", "Details", "MedicalFile", new { id = stud.Patient.MedicalFile.Id })
-                            <p>Op: @stud.TimeSlot.StartAvailability.ToString("d")</p>
-                            <p>Tussen: @stud.TimeSlot.StartAvailability.ToString("t") - @stud.TimeSlot.StopAvailability.ToString("t")</p>
-                            @Html.ActionLink("Cancel Appointment", "Delete", "Appointment", new { id = stud.Id })
-                        </div>
-                    </div>
-                }
-            </div>
-        }else{
-            <h5> No Appointments for today.</h5>
-        }
-        @if (ViewBag.AppointmentsNext.Count > 0)
-        {
-            <h5> Amount of appointments upcoming : @ViewBag.AppointmentsNextCount</h5>
+            <h3 div="card">Hey @User.Identity.Name!</h3>
             <hr />
-            <div class="row">
-                @foreach (var stud in ViewBag.AppointmentsNext)
-                {
-                    <div class="col-md-4">
-                        <div class="card">
-                            @if (User.HasClaim("UserType", "Patient")){
-                                <h5>You have a appointment with: @stud.Employee.ApplicationUser.FirstName @stud.Employee.ApplicationUser.SurName</h5>
-                            }
-                            else{
-                                <h5>You have a appointment with: @stud.Patient.ApplicationUser.FirstName @stud.Patient.ApplicationUser.SurName</h5>
-                            }
-                            @Html.ActionLink("MedicalFile", "Details", "MedicalFile", new { id = stud.Patient.MedicalFile.Id })
-                            <p>Op: @stud.TimeSlot.StartAvailability.ToString("d")</p>
-                            <p>Tussen: @stud.TimeSlot.StartAvailability.ToString("t") - @stud.TimeSlot.StopAvailability.ToString("t")</p>
-                            @Html.ActionLink("Cancel Appointment", "Delete", "Appointment", new { id = stud.Id })
-                        </div>
-                    </div>
-                }
-                </div>
-        }else{
-            <h5> No upcoming Appointments.</h5>
         }
+        <div class="col-md-6">
+            @if (ViewBag.AppointmentsNow.Count > 0)
+            {
+                <h5> Amount of appointments today : @ViewBag.AppointmentsNowCount</h5>
+                <hr/>
+
+                <div class="row">
+                    @foreach (var stud in ViewBag.AppointmentsNow)
+                    {
+                        <div class="col-md-4 text-center">
+                            <div class="card">
+                                @if (User.HasClaim("UserType", "Patient")){
+                                    <div class="card-header">You have a appointment with: @stud.Employee.ApplicationUser.FirstName @stud.Employee.ApplicationUser.SurName</div>
+                                }else{
+                                    <div class="card-header">You have a appointment with: @stud.Patient.ApplicationUser.FirstName @stud.Patient.ApplicationUser.SurName</div>
+                                }
+                                @Html.ActionLink("MedicalFile", "Details", "MedicalFile", new { id = stud.Patient.MedicalFile.Id })
+                                <div class="card-title">Op: @stud.TimeSlot.StartAvailability.ToString("d")</div>
+                                <p class="card-text">Tussen: @stud.TimeSlot.StartAvailability.ToString("t") - @stud.TimeSlot.StopAvailability.ToString("t")</p>
+                                @Html.ActionLink("Cancel Appointment", "Delete", "Appointment", new { id = stud.Id })
+                            </div>
+                        </div>
+                    }
+                </div>
+            }else{
+                <div class="card text-center">
+                    <div class="card-header">No appointments for today.</div>
+                </div>
+            }
+        </div>
+        <div class="col-md-6">
+            @if (ViewBag.AppointmentsNext.Count > 0)
+            {
+                <h5> Amount of appointments upcoming : @ViewBag.AppointmentsNextCount</h5>
+                <hr />
+                <div class="row">
+                    @foreach (var stud in ViewBag.AppointmentsNext)
+                    {
+                        <div class="col-md-4">
+                            <div class="card">
+                                @if (User.HasClaim("UserType", "Patient")){
+                                    <h5>You have a appointment with: @stud.Employee.ApplicationUser.FirstName @stud.Employee.ApplicationUser.SurName</h5>
+                                }
+                                else{
+                                    <h5>You have a appointment with: @stud.Patient.ApplicationUser.FirstName @stud.Patient.ApplicationUser.SurName</h5>
+                                }
+                                @Html.ActionLink("MedicalFile", "Details", "MedicalFile", new { id = stud.Patient.MedicalFile.Id })
+                                <p>Op: @stud.TimeSlot.StartAvailability.ToString("d")</p>
+                                <p>Tussen: @stud.TimeSlot.StartAvailability.ToString("t") - @stud.TimeSlot.StopAvailability.ToString("t")</p>
+                                @Html.ActionLink("Cancel Appointment", "Delete", "Appointment", new { id = stud.Id })
+                            </div>
+                        </div>
+                    }
+                    </div>
+            }else{
+                <div class="card text-center">
+                    <div class="card-header">No upcoming Appointments.</div>
+                </div>
+            }
+        </div>
         @if (User.HasClaim("UserType", "Patient"))
         {
             @Html.ActionLink("Afspraak maken", "Create", "Appointment")
