--- a/Fysio WebApplication/Views/Patient/Edit.cshtml
+++ b/Fysio WebApplication/Views/Patient/Edit.cshtml
@@ -4,10 +4,9 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1 class="text-center">Edit Patient</h1>
+<hr/>
 
-<h4>Patient</h4>
-<hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit" enctype="multipart/form-data">
