--- a/Fysio WebApplication/Views/PracticeRoom/Create.cshtml
+++ b/Fysio WebApplication/Views/PracticeRoom/Create.cshtml
@@ -4,28 +4,33 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1 class="text-center">Creating a new practice room</h1>
 
-<h4>PracticeRoom</h4>
 <hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
-</div>
 
-<div>
-    <a href="javascript:history.go(-1)">Back</a>
+<div class="card col-md-6">
+    <div class="card-body">
+        <div class="row">
+            <div class="col-md-6 ">
+                <form asp-action="Create">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <div class="form-group">
+                        <label class="control-label">Practice room</label>
+                        <input asp-for="Name" placeholder="Name of the practice room" class="form-control" />
+                        <span asp-validation-for="Name" class="text-danger"></span>
+                    </div>
+                    <br />
+                    <div class="form-group">
+                        <input type="submit" value="Create" class="btn btn-primary" />
+                    </div>
+                </form>
+            </div>
+        </div>
+        <br/>
+        <div>
+            <a href="javascript:history.go(-1)">Back</a>
+        </div>
+    </div>
 </div>
 
 @section Scripts {
