--- a/Fysio WebApplication/Views/PracticeRoom/Details.cshtml
+++ b/Fysio WebApplication/Views/PracticeRoom/Details.cshtml
@@ -4,30 +4,38 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1 class="text-center">
+    Details of
+    @Html.DisplayFor(model => model.Name)
+</h1>
+<hr/>
+<div class="card col-md-6" >
+    <div class="card-body">
+        <h4>PracticeRoom</h4>
+        <hr />
+        <dl class="row">
+            <dt class = "col-sm-4">
+                @Html.DisplayNameFor(model => model.Id)
+            </dt>
+            <dd class = "col-sm-8">
+                @Html.DisplayFor(model => model.Id)
+            </dd>
+            <dt class = "col-sm-4">
+                Name Practice room
+            </dt>
+            <dd class = "col-sm-8">
+                @Html.DisplayFor(model => model.Name)
+            </dd>
+        </dl>
+    </div>
 
-<div>
-    <h4>PracticeRoom</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Id)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Id)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-    </dl>
-</div>
-<div>
-    @if (User.HasClaim("UserType", "Employee") || User.HasClaim("UserType", "Student"))
-    {
-        @Html.ActionLink("Edit | ", "Edit", new { id = Model.Id })
-    }
-    <a href="javascript:history.go(-1)">Back</a>
+    <div class="container">
+        @if (User.HasClaim("UserType", "Employee") || User.HasClaim("UserType", "Student"))
+        {
+            @Html.ActionLink("Edit | ", "Edit", new { id = Model.Id })
+            
+        }
+        <a href="javascript:history.go(-1)">Back</a>
+    </div>
+    <br />
 </div>
