--- a/Fysio WebApplication/Views/PracticeRoom/Index.cshtml
+++ b/Fysio WebApplication/Views/PracticeRoom/Index.cshtml
@@ -4,43 +4,50 @@
     ViewData["Title"] = "View";
 }
 
-<h1>View</h1>
-@if (User.HasClaim("UserType", "Employee") || User.HasClaim("UserType", "Student"))
-{
-    <p>
-        <a asp-action="Create">Create New</a>
-    </p>
-}
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Id)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
+<h1 class="text-center">Practice rooms</h1>
+<hr/>
+@* Senter the card div *@
+<div class="card" >
+    <div class="card-body">
+        @if (User.HasClaim("UserType", "Employee") || User.HasClaim("UserType", "Student"))
         {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Id)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Name)
-                </td>
-                <td>
-                    @if (User.HasClaim("UserType", "Employee") || User.HasClaim("UserType", "Student"))
-                    {
-                        @Html.ActionLink("Edit | ", "Edit", new { id=item.Id})
-                    }
-                    @Html.ActionLink("Details", "Details", new { id=item.Id})
-                </td>
-            </tr>
+            <div class="text-right">
+                <a asp-action="Create" class="btn btn-primary">Create New</a>
+            </div>
         }
-    </tbody>
-</table>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Id)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Name)
+                    </th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Id)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Name)
+                        </td>
+                        <td>
+                            @if (User.HasClaim("UserType", "Employee") || User.HasClaim("UserType", "Student"))
+                            {
+                                @Html.ActionLink("Edit | ", "Edit", new { id=item.Id})
+                            }
+                            @Html.ActionLink("Details", "Details", new { id=item.Id})
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+
+    </div>
+</div>
