--- a/Fysio WebApplication/Views/Shared/_Layout.cshtml
+++ b/Fysio WebApplication/Views/Shared/_Layout.cshtml
@@ -22,8 +22,8 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/5.0.0/mdb.min.css"
           rel="stylesheet" />
 </head>
-<body>
-    <header>
+<body style="background-color: #eeeeee;">
+    <header style="background-color: #fff">
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm border-bottom box-shadow mb-3">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index" >
@@ -94,7 +94,6 @@
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/js/darkmode.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @RenderSection("Scripts", required: false)
 </body>
