--- a/Fysio WebApplication/Views/Appointment/Availability.cshtml
+++ b/Fysio WebApplication/Views/Appointment/Availability.cshtml
@@ -2,8 +2,9 @@
 @{
     ViewData["Title"] = "Create Availability";
 }
+<h1 class="text-center">@ViewData["Title"]</h1>
 
-<h1>@ViewData["Title"]</h1>
+<hr />
 
 <form id="Availabilty" method="post">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
