--- a/Fysio WebApplication/Views/Auth/AccountIndex.cshtml
+++ b/Fysio WebApplication/Views/Auth/AccountIndex.cshtml
@@ -4,7 +4,9 @@
     ViewData["Title"] = "View Employee";
 }
 
-<h1>View</h1>
+<h1 class="text-center">@ViewData["Title"]</h1>
+
+<hr />
 
 <div>
     <h4>@ViewData["Title"]</h4>
