--- a/Fysio WebApplication/Views/Auth/RegisterEmployee.cshtml
+++ b/Fysio WebApplication/Views/Auth/RegisterEmployee.cshtml
@@ -3,7 +3,9 @@
     ViewData["Title"] = "Register new Employee";
 }
 
-<h1>@ViewData["Title"]</h1>
+<h1 class="text-center">@ViewData["Title"]</h1>
+
+<hr />
 
 
 <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
