--- a/Fysio WebApplication/Views/Error/AccessDenied.cshtml
+++ b/Fysio WebApplication/Views/Error/AccessDenied.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
     ViewData["Title"] = "Access Denied";
 }
-
-<h1> Access Denied. </h1>
+<h1 class="text-center">Access Denied</h1>
+<hr/>
 <h3> You don't have the privilages to access this page with your current role.</h3>
 <a class="btn btn-outline-danger" href="javascript:history.go(-1)"> OK, take me back </a>
 <a class="btn btn-outline-secondary" href="/auth/logout"> Log Out </a>
