--- a/Fysio WebApplication/Views/MedicalFile/AddRoomTreatment.cshtml
+++ b/Fysio WebApplication/Views/MedicalFile/AddRoomTreatment.cshtml
@@ -4,10 +4,8 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>View</h1>
-
-<h4>PracticeRoom</h4>
-<hr />
+<h1 class="text-center">Add room to treatment</h1>
+<hr/>
 <div class="row">
     <div class="col-md-4">
         <form action="@Html.Raw(ViewBag.Url)" method="post" novalidate="novalidate">
