--- a/Fysio WebApplication/Views/MedicalFile/AppointmentNew.cshtml
+++ b/Fysio WebApplication/Views/MedicalFile/AppointmentNew.cshtml
@@ -4,10 +4,8 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
-
-<h4>Appointment</h4>
-<hr />
+<h1 class="text-center">Create appointment</h1>
+<hr/>
 <div class="row">
     <div class="col-md-6">
         <form action="@ViewBag.PostUrl" method="post">
