--- a/Fysio WebApplication/Views/MedicalFile/Create.cshtml
+++ b/Fysio WebApplication/Views/MedicalFile/Create.cshtml
@@ -4,10 +4,8 @@
     ViewData["Title"] = "CreateMedicalFile";
 }
 
-<h1>CreateMedicalFile</h1>
-
-<h4>MedicalFile</h4>
-<hr />
+<h1 class="text-center">Create medical file</h1>
+<hr/>
 <div class="row">
     <div class="col-md-4">
         <form action="/MedicalFile/Create" method="post" novalidate="novalidate">
