--- a/Fysio WebApplication/Views/MedicalFile/IndexPersonalSupervise.cshtml
+++ b/Fysio WebApplication/Views/MedicalFile/IndexPersonalSupervise.cshtml
@@ -4,12 +4,17 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>All Medical Files you supervise</h1>
-<p>
-    <a asp-action="IndexPersonalSupervise">Go to your Supervise files</a> | <a asp-action="IndexPersonalTherapist">Go to your medicalfiles</a> | <a asp-action="Index">Go back to all files</a> | <a asp-action="Create">Create MedicalFile</a>
-</p>
-
-<table class="table">
+<h1 class="text-center">All Medical Files you supervise</h1>
+<hr/>
+<div class="card">
+    <div class="card-body">	
+    <div class="text-center">
+        <a asp-action="IndexPersonalSupervise">Go to your Supervise files</a> | <a asp-action="IndexPersonalTherapist">Go to your medicalfiles</a>
+    </div>
+    <div class="text-left">
+        <a asp-action="Create" class="btn btn-primary">Create MedicalFile</a> 
+    </div>
+<table class="table table-striped">
     <thead>
         <tr>
             <th>
