--- a/Fysio WebApplication/Views/MedicalFile/TreatmentPlan.cshtml
+++ b/Fysio WebApplication/Views/MedicalFile/TreatmentPlan.cshtml
@@ -4,8 +4,8 @@
     ViewData["Title"] = "TreatmentPlan";
 }
 
-<h1>TreatmentPlan</h1>
-
+<h1 class="text-center">Treatment plan</h1>
+<hr/>
 <table class="table">
     <thead>
         <tr>
