--- a/Fysio WebApplication/Views/Patient/Details.cshtml
+++ b/Fysio WebApplication/Views/Patient/Details.cshtml
@@ -7,7 +7,7 @@
 <h1 class="text-center">Patient's details</h1>
 <hr/>
 
-  <div class="container py-5">
+  <div class="container">
     <div class="row">
       <div class="col-lg-4">
         <div class="card mb-4">
