--- a/Fysio WebApplication/Views/Appointment/Create.cshtml
+++ b/Fysio WebApplication/Views/Appointment/Create.cshtml
@@ -1,12 +1,11 @@
 ﻿@model Core.DomainModel.Availability
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Create appointment";
 }
 
-<h1>Create</h1>
+<h1 class="text-center">@ViewData["Title"]</h1>
 
-<h4>Appointment</h4>
 <hr />
 <div class="row">
     <div class="col-md-6">
