--- a/Fysio WebApplication/Views/Appointment/Delete.cshtml
+++ b/Fysio WebApplication/Views/Appointment/Delete.cshtml
@@ -1,10 +1,12 @@
 ﻿@model Core.DomainModel.Appointment
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete Appointment";
 }
 
-<h1>Delete</h1>
+<h1 class="text-center">@ViewData["Title"]</h1>
+
+<hr />
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
