--- a/Fysio WebApplication/Views/Appointment/Details.cshtml
+++ b/Fysio WebApplication/Views/Appointment/Details.cshtml
@@ -1,10 +1,11 @@
 ﻿@model Core.DomainModel.Appointment
 
 @{
-    ViewData["Title"] = "Detail";
+    ViewData["Title"] = "Details appointment";
 }
+<h1 class="text-center">@ViewData["Title"]</h1>
 
-<h1>Detail</h1>
+<hr />
 <div>
     <h4>MedicalFile</h4>
     <hr />
