--- a/Fysio WebApplication/Views/Auth/Login.cshtml
+++ b/Fysio WebApplication/Views/Auth/Login.cshtml
@@ -3,8 +3,9 @@
 @{
     ViewData["Title"] = "Log in";
 }
+<h1 class="text-center">@ViewData["Title"]</h1>
 
-<h1>@ViewData["Title"]</h1>
+<hr />
 <div class="row">
     <div class="col-md-4">
         <section>
