--- a/Fysio WebApplication/Views/Error/Index 2.cshtml
+++ b/Fysio WebApplication/Views/Error/Index 2.cshtml
@@ -2,7 +2,9 @@
     ViewData["Title"] = "Error ";
 }
 
-<h1 class="text-danger">Error.</h1>
+
+<h1 class="text-center">Error</h1>
+<hr/>
 <h2 class="text-danger">An error occurred while processing your request.</h2>
 
 @if(ViewBag.ErrorCode != null){
