--- a/Fysio WebApplication/Views/Error/Index.cshtml
+++ b/Fysio WebApplication/Views/Error/Index.cshtml
@@ -2,7 +2,8 @@
     ViewData["Title"] = "Error " ;
 }
 
-<h1 class="text-danger">Error.</h1>
+<h1 class="text-center">Error</h1>
+<hr/>
 <h2 class="text-danger">An error occurred while processing your request.</h2>
 
 <p> <strong> Something went wrong. </strong></p>
