--- a/Fysio WebApplication/Views/Error/NoMedicalFile.cshtml
+++ b/Fysio WebApplication/Views/Error/NoMedicalFile.cshtml
@@ -2,7 +2,8 @@
     ViewData["Title"] = "No Medical File";
 }
 
-<h1> No Medical File. </h1>
+<h1 class="text-center">No Medical File</h1>
+<hr/>
 <h3> You don't have a medical file yet. This has to be created by a employee at the hospital. Either wait or visit the hospital to get your intake.</h3>
 <a class="btn btn-outline-danger" href="javascript:history.go(-1)"> OK, take me back </a>
 <a class="btn btn-outline-secondary" href="/auth/logout"> Log Out </a>
