--- a/Fysio WebApplication/Views/MedicalFile/Appointment.cshtml
+++ b/Fysio WebApplication/Views/MedicalFile/Appointment.cshtml
@@ -3,11 +3,9 @@
 @{
     ViewData["Title"] = "Detail";
 }
-
-<h1>Detail</h1>
+<h1 class="text-center">Appointment patient</h1>
+<hr/>
 <div>
-    <h4>MedicalFile</h4>
-    <hr />
     <dl class="row">
         <dt class="col-sm-2">
             Patient
