--- a/Fysio WebApplication/Views/MedicalFile/Edit.cshtml
+++ b/Fysio WebApplication/Views/MedicalFile/Edit.cshtml
@@ -4,10 +4,8 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
-
-<h4>MedicalFile</h4>
-<hr />
+<h1 class="text-center">Edit medicalfile</h1>
+<hr/>
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
