--- a/Fysio WebApplication/Views/MedicalFile/NotesNew.cshtml
+++ b/Fysio WebApplication/Views/MedicalFile/NotesNew.cshtml
@@ -4,10 +4,8 @@
     ViewData["Title"] = "NotesCreate";
 }
 
-<h1>NotesCreate</h1>
-
-<h4>Note</h4>
-<hr />
+<h1 class="text-center">Create new note</h1>
+<hr/>
 <div class="row">
     <div class="col-md-4">
         <form action="@Html.Raw(ViewBag.Url)" method="post" novalidate="novalidate">
