--- a/Fysio WebApplication/Views/MedicalFile/TreatmentPlanNew.cshtml
+++ b/Fysio WebApplication/Views/MedicalFile/TreatmentPlanNew.cshtml
@@ -4,10 +4,9 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
 
-<h4>TreatmentPlan</h4>
-<hr />
+<h1 class="text-center">Create treatmentplan</h1>
+<hr/>
 <div class="row">
     <div class="col-md-4">
         <form action="@Html.Raw(ViewBag.Url)" method="post" novalidate="novalidate">
