--- a/Fysio WebApplication/Views/Note/Index.cshtml
+++ b/Fysio WebApplication/Views/Note/Index.cshtml
@@ -4,7 +4,11 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+
+<h1 class="text-center">Notes</h1>
+<hr/>
+<div class="card" >
+    <div class="card-body">
 <table class="table">
     <thead>
         <tr>
@@ -45,3 +49,6 @@
 }
     </tbody>
 </table>
+
+    </div>
+</div>
